tests/snapshots/snapshot_fixtures__fixtures__slice_swap_fixup.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/slice_swap_fixup.c" (c, x86_64-unknown-linux-gnu)
global __const.main.c : s32i[3] = [7, 8, 9] [cir_private, default, dso_local, constant]
global __const.main.b : s32i[3] = [3, 1, 2] [cir_private, default, dso_local, constant]
global __const.main.a : s32i[5] = [5, 3, 4, 1, 2] [cir_private, default, dso_local, constant]
global .str : s8i[16] = "%d %d %d %d %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = "%d %d %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[8] = "tmp=%d\n" [cir_private, default, align 1, dso_local, constant]

fn pairwise_swap(%arg4: s32i*, %arg5: s32i) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s32i*, %arg5: s32i):
        %156 = alloca s32i*, "items", align 8
        %157 = alloca s32i, "len", align 4
        store %arg4, %156
        store %arg5, %157
        scope {
            %158 = alloca s32i, "i", align 4
            %159 = const 0 : s32i
            store %159, %158, align 4
            for cond: {
                %200 = load %158 : s32i, align 4
                %201 = load %157 : s32i, align 4
                %202 = cmp lt %200, %201 : bool
                condition %202
            } step: {
                %160 = load %158 : s32i, align 4
                %161 = inc %160 : s32i [nsw]
                store %161, %158, align 4
                yield
            } do {
                scope {
                    scope {
                        %162 = alloca s32i, "j", align 4
                        %163 = const 0 : s32i
                        store %163, %162, align 4
                        for cond: {
                            %197 = load %162 : s32i, align 4
                            %198 = load %157 : s32i, align 4
                            %199 = cmp lt %197, %198 : bool
                            condition %199
                        } step: {
                            %164 = load %162 : s32i, align 4
                            %165 = inc %164 : s32i [nsw]
                            store %165, %162, align 4
                            yield
                        } do {
                            scope {
                                scope {
                                    %166 = load %158 : s32i, align 4
                                    %167 = cast(integral) %166 : s64i
                                    %168 = load %156 : s32i*, align 8
                                    %169 = ptr_stride %168, %167 : s32i*
                                    %170 = load %169 : s32i, align 4
                                    %171 = load %162 : s32i, align 4
                                    %172 = cast(integral) %171 : s64i
                                    %173 = load %156 : s32i*, align 8
                                    %174 = ptr_stride %173, %172 : s32i*
                                    %175 = load %174 : s32i, align 4
                                    %176 = cmp gt %170, %175 : bool
                                    if %176 {
                                        %177 = alloca s32i, "tmp", align 4
                                        %178 = load %158 : s32i, align 4
                                        %179 = cast(integral) %178 : s64i
                                        %180 = load %156 : s32i*, align 8
                                        %181 = ptr_stride %180, %179 : s32i*
                                        %182 = load %181 : s32i, align 4
                                        store %182, %177, align 4
                                        %183 = load %162 : s32i, align 4
                                        %184 = cast(integral) %183 : s64i
                                        %185 = load %156 : s32i*, align 8
                                        %186 = ptr_stride %185, %184 : s32i*
                                        %187 = load %186 : s32i, align 4
                                        %188 = load %158 : s32i, align 4
                                        %189 = cast(integral) %188 : s64i
                                        %190 = load %156 : s32i*, align 8
                                        %191 = ptr_stride %190, %189 : s32i*
                                        store %187, %191, align 4
                                        %192 = load %177 : s32i, align 4
                                        %193 = load %162 : s32i, align 4
                                        %194 = cast(integral) %193 : s64i
                                        %195 = load %156 : s32i*, align 8
                                        %196 = ptr_stride %195, %194 : s32i*
                                        store %192, %196, align 4
                                        yield
                                    }
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn pairwise_swap_tmp_reused(%arg2: s32i*, %arg3: s32i) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i*, %arg3: s32i):
        %104 = alloca s32i*, "items", align 8
        %105 = alloca s32i, "len", align 4
        store %arg2, %104
        store %arg3, %105
        scope {
            %106 = alloca s32i, "i", align 4
            %107 = const 0 : s32i
            store %107, %106, align 4
            for cond: {
                %153 = load %106 : s32i, align 4
                %154 = load %105 : s32i, align 4
                %155 = cmp lt %153, %154 : bool
                condition %155
            } step: {
                %108 = load %106 : s32i, align 4
                %109 = inc %108 : s32i [nsw]
                store %109, %106, align 4
                yield
            } do {
                scope {
                    scope {
                        %110 = alloca s32i, "j", align 4
                        %111 = const 0 : s32i
                        store %111, %110, align 4
                        for cond: {
                            %150 = load %110 : s32i, align 4
                            %151 = load %105 : s32i, align 4
                            %152 = cmp lt %150, %151 : bool
                            condition %152
                        } step: {
                            %112 = load %110 : s32i, align 4
                            %113 = inc %112 : s32i [nsw]
                            store %113, %110, align 4
                            yield
                        } do {
                            scope {
                                scope {
                                    %114 = load %106 : s32i, align 4
                                    %115 = cast(integral) %114 : s64i
                                    %116 = load %104 : s32i*, align 8
                                    %117 = ptr_stride %116, %115 : s32i*
                                    %118 = load %117 : s32i, align 4
                                    %119 = load %110 : s32i, align 4
                                    %120 = cast(integral) %119 : s64i
                                    %121 = load %104 : s32i*, align 8
                                    %122 = ptr_stride %121, %120 : s32i*
                                    %123 = load %122 : s32i, align 4
                                    %124 = cmp gt %118, %123 : bool
                                    if %124 {
                                        %125 = alloca s32i, "tmp", align 4
                                        %126 = load %106 : s32i, align 4
                                        %127 = cast(integral) %126 : s64i
                                        %128 = load %104 : s32i*, align 8
                                        %129 = ptr_stride %128, %127 : s32i*
                                        %130 = load %129 : s32i, align 4
                                        store %130, %125, align 4
                                        %131 = load %110 : s32i, align 4
                                        %132 = cast(integral) %131 : s64i
                                        %133 = load %104 : s32i*, align 8
                                        %134 = ptr_stride %133, %132 : s32i*
                                        %135 = load %134 : s32i, align 4
                                        %136 = load %106 : s32i, align 4
                                        %137 = cast(integral) %136 : s64i
                                        %138 = load %104 : s32i*, align 8
                                        %139 = ptr_stride %138, %137 : s32i*
                                        store %135, %139, align 4
                                        %140 = load %125 : s32i, align 4
                                        %141 = load %110 : s32i, align 4
                                        %142 = cast(integral) %141 : s64i
                                        %143 = load %104 : s32i*, align 8
                                        %144 = ptr_stride %143, %142 : s32i*
                                        store %140, %144, align 4
                                        %145 = get_global @printf : ((s8i*, ...) -> s32i)*
                                        %146 = get_global @.str.2 : s8i[8]*
                                        %147 = cast(array_to_ptrdecay) %146 : s8i*
                                        %148 = load %125 : s32i, align 4
                                        %149 = call @printf(%147, %148) : s32i [all]
                                        yield
                                    }
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn nested_self_swap(%arg0: s32i*, %arg1: s32i) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*, %arg1: s32i):
        %61 = alloca s32i*, "items", align 8
        %62 = alloca s32i, "len", align 4
        store %arg0, %61
        store %arg1, %62
        scope {
            %63 = alloca s32i, "i", align 4
            %64 = const 0 : s32i
            store %64, %63, align 4
            for cond: {
                %101 = load %63 : s32i, align 4
                %102 = load %62 : s32i, align 4
                %103 = cmp lt %101, %102 : bool
                condition %103
            } step: {
                %65 = load %63 : s32i, align 4
                %66 = inc %65 : s32i [nsw]
                store %66, %63, align 4
                yield
            } do {
                scope {
                    scope {
                        %67 = alloca s32i, "j", align 4
                        %68 = const 0 : s32i
                        store %68, %67, align 4
                        for cond: {
                            %98 = load %67 : s32i, align 4
                            %99 = load %62 : s32i, align 4
                            %100 = cmp lt %98, %99 : bool
                            condition %100
                        } step: {
                            %69 = load %67 : s32i, align 4
                            %70 = inc %69 : s32i [nsw]
                            store %70, %67, align 4
                            yield
                        } do {
                            scope {
                                scope {
                                    %71 = load %63 : s32i, align 4
                                    %72 = cast(integral) %71 : s64i
                                    %73 = load %61 : s32i*, align 8
                                    %74 = ptr_stride %73, %72 : s32i*
                                    %75 = load %74 : s32i, align 4
                                    %76 = const 0 : s32i
                                    %77 = cmp gt %75, %76 : bool
                                    if %77 {
                                        %78 = alloca s32i, "tmp", align 4
                                        %79 = load %67 : s32i, align 4
                                        %80 = cast(integral) %79 : s64i
                                        %81 = load %61 : s32i*, align 8
                                        %82 = ptr_stride %81, %80 : s32i*
                                        %83 = load %82 : s32i, align 4
                                        store %83, %78, align 4
                                        %84 = load %67 : s32i, align 4
                                        %85 = cast(integral) %84 : s64i
                                        %86 = load %61 : s32i*, align 8
                                        %87 = ptr_stride %86, %85 : s32i*
                                        %88 = load %87 : s32i, align 4
                                        %89 = load %67 : s32i, align 4
                                        %90 = cast(integral) %89 : s64i
                                        %91 = load %61 : s32i*, align 8
                                        %92 = ptr_stride %91, %90 : s32i*
                                        store %88, %92, align 4
                                        %93 = load %78 : s32i, align 4
                                        %94 = load %67 : s32i, align 4
                                        %95 = cast(integral) %94 : s64i
                                        %96 = load %61 : s32i*, align 8
                                        %97 = ptr_stride %96, %95 : s32i*
                                        store %93, %97, align 4
                                        yield
                                    }
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[5], "a", align 16
    %2 = alloca s32i[3], "b", align 4
    %3 = alloca s32i[3], "c", align 4
    %4 = const 0 : s32i
    store %4, %0
    %5 = get_global @__const.main.a : s32i[5]*
    copy %1, %5
    %6 = cast(array_to_ptrdecay) %1 : s32i*
    %7 = const 5 : s32i
    call @pairwise_swap(%6, %7) [all]
    %8 = get_global @printf : ((s8i*, ...) -> s32i)*
    %9 = get_global @.str : s8i[16]*
    %10 = cast(array_to_ptrdecay) %9 : s8i*
    %11 = const 0 : s64i
    %12 = get_element %1[%11] : s32i*
    %13 = load %12 : s32i, align 16
    %14 = const 1 : s64i
    %15 = get_element %1[%14] : s32i*
    %16 = load %15 : s32i, align 4
    %17 = const 2 : s64i
    %18 = get_element %1[%17] : s32i*
    %19 = load %18 : s32i, align 8
    %20 = const 3 : s64i
    %21 = get_element %1[%20] : s32i*
    %22 = load %21 : s32i, align 4
    %23 = const 4 : s64i
    %24 = get_element %1[%23] : s32i*
    %25 = load %24 : s32i, align 16
    %26 = call @printf(%10, %13, %16, %19, %22, %25) : s32i [all]
    %27 = get_global @__const.main.b : s32i[3]*
    copy %2, %27
    %28 = cast(array_to_ptrdecay) %2 : s32i*
    %29 = const 3 : s32i
    call @pairwise_swap_tmp_reused(%28, %29) [all]
    %30 = get_global @printf : ((s8i*, ...) -> s32i)*
    %31 = get_global @.str.1 : s8i[10]*
    %32 = cast(array_to_ptrdecay) %31 : s8i*
    %33 = const 0 : s64i
    %34 = get_element %2[%33] : s32i*
    %35 = load %34 : s32i, align 4
    %36 = const 1 : s64i
    %37 = get_element %2[%36] : s32i*
    %38 = load %37 : s32i, align 4
    %39 = const 2 : s64i
    %40 = get_element %2[%39] : s32i*
    %41 = load %40 : s32i, align 4
    %42 = call @printf(%32, %35, %38, %41) : s32i [all]
    %43 = get_global @__const.main.c : s32i[3]*
    copy %3, %43
    %44 = cast(array_to_ptrdecay) %3 : s32i*
    %45 = const 3 : s32i
    call @nested_self_swap(%44, %45) [all]
    %46 = get_global @printf : ((s8i*, ...) -> s32i)*
    %47 = get_global @.str.1 : s8i[10]*
    %48 = cast(array_to_ptrdecay) %47 : s8i*
    %49 = const 0 : s64i
    %50 = get_element %3[%49] : s32i*
    %51 = load %50 : s32i, align 4
    %52 = const 1 : s64i
    %53 = get_element %3[%52] : s32i*
    %54 = load %53 : s32i, align 4
    %55 = const 2 : s64i
    %56 = get_element %3[%55] : s32i*
    %57 = load %56 : s32i, align 4
    %58 = call @printf(%48, %51, %54, %57) : s32i [all]
    %59 = const 0 : s32i
    store %59, %0
    %60 = load %0 : s32i
    return %60
}
